--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<h1> Ananya Rao> <h1>
+<h1> Ananya Rao> </h1>
+
+
+<div class="nav-bar">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
 
 .nav-bar {
 width: 100%;
