--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p><h1> Ananya Rao </h1></p>
 
 
-<div class="nav-bar">
+<div class=nav-bar>
   <a class="active" href="#home">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
@@ -13,6 +13,7 @@ width: 100%;
 height: 50px;
 margin: 0;
 background: black; }
+
 .nav-bar > .element {
 width: 19.5%;
 line-height: 50px;
@@ -24,6 +25,6 @@ font-family: Arial;
 text-decoration: none; }
   
 <div class=intro>
-<img src=./Desktop/Pictures/pp.jpg>
+<img src="./Desktop/Pictures/pp.jpg">
 <p> That is a picture of me! </p>
 </div>
