--- a/index.html
+++ b/index.html
@@ -8,23 +8,10 @@
   <a href="#about">About</a>
 </div>
 
-.nav-bar {
-width: 100%;
-height: 50px;
-margin: 0;
-background: black; }
-
-.nav-bar > .element {
-width: 19.5%;
-line-height: 50px;
-text-align: center;
-color: white;
-display: inline-block;
-margin: 0;
-font-family: Arial;
-text-decoration: none; }
   
 <div class=intro>
-<img src="./Desktop/Pictures/pp.jpg">
+<img src="pp.jpg">
 <p> That is a picture of me! </p>
 </div>
+
+<p> <h3> Education </h3> </p>
