--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   
 <div class=intro>
 <img src="pp.jpg">
-<p> That is a picture of me! </p>
+<p> Lorem ipsum dolor sit amet consectetuer adipiscing elit. Eros natoque adipiscing pharetra ac ligula mus mi tempor fringilla urna dignissim facilisi mi sit. Quis mus cubilia hendrerit gravida pellentesque fermentum montes erat sit litora laoreet ad nisl et. Urna mattis scelerisque nulla aliquet quisque class sed cubilia? Ultrices metus quisque eu ipsum interdum. Curabitur velit in mattis pharetra dapibus. </p>
 </div>
 
 <p> <h3> Education </h3> </p>
+<p> BS in Computer Science, Additional Major in Robotics, School of Computer Science, Carnegie Mellon University, May 2021 </p>
