--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
   
 <div class=intro>
-<img src="pp.jpg">
+<img src="pp.jpg"
+  style="width:250px;height:250px;">
 <p> Lorem ipsum dolor sit amet consectetuer adipiscing elit. Eros natoque adipiscing pharetra ac ligula mus mi tempor fringilla urna dignissim facilisi mi sit. Quis mus cubilia hendrerit gravida pellentesque fermentum montes erat sit litora laoreet ad nisl et. Urna mattis scelerisque nulla aliquet quisque class sed cubilia? Ultrices metus quisque eu ipsum interdum. Curabitur velit in mattis pharetra dapibus. </p>
 </div>
 
