--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <div class=nav-bar>
   <a class="active" href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="#news">Experience</a>
+  <a href="#contact">Projects</a>
+  <a href="#about">Skills</a>
 </div>
 
   
