--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
+<body>
+  
+  <header id="home">
+    <div class=nav-bar>
+      <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
+      <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
+      <ul id="nav" class="nav">
+        <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+        <li><a class="smoothscroll" href="#about">About</a></li>
+        <li><a class="smoothscroll" href="#experience">Experience</a></li>
+        <li><a class="smoothscroll" href="#projects">Projects</a></li>
+        <li><a class="smoothscroll" href="#skills">Skills</a></li>
+        <li><a class="smoothscroll" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </header>
+  
+</body>
+
 <p><h1> Ananya Rao </h1></p>
 
 
 <div class=nav-bar>
   <a class="active" href="#home">Home</a>
-  <a href="#news">Experience</a>
+  <a href="#news">Experience</a></a
   <a href="#contact">Projects</a>
   <a href="#about">Skills</a>
 </div>
