--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<head>
+  <link rel="stylesheet" href="css/default.css">
+</head>                                           
 <body>
   
   <header id="home">
-    <div class=nav-bar>
+    <nav id="nav-wrap">
       <a class="mobile-btn" href="#nav-wrap" title="Show navigation">Show navigation</a>
       <a class="mobile-btn" href="#" title="Hide navigation">Hide navigation</a>
       <ul id="nav" class="nav">
@@ -12,7 +15,7 @@
         <li><a class="smoothscroll" href="#skills">Skills</a></li>
         <li><a class="smoothscroll" href="#contact">Contact</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
   
 </body>
