--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
 	 
 	  
+
     <div class="section" id="about"><h1>About</h1><hr></div>
 
     <div class="container">
@@ -45,6 +46,7 @@
     </div><!--/.container-->
 
 
+
     <div class="section" id="experience"><h1>Experience</h1><hr></div>
 
     <div class="container">
@@ -59,7 +61,7 @@
           </div>
         </div>
 		  
-	<div class="col-md-8">
+	     <div class="col-md-8">
           <div class="well">
             <h3>GE Transportation</h3>
 	    <h6>Digital Technology Intern </h6>
@@ -79,7 +81,7 @@
           </div>
         </div>
 	      
-	<div class="col-md-8">
+	      <div class="col-md-8">
           <div class="well">
             <h3>Juni Learning</h3>
 	    <h6>Instructor </h6>
@@ -90,7 +92,9 @@
       </div><!--/.row-->
     </div><!--/.container-->
 
-    <div class="projects" id="Projects"><h1>What I Do</h1><hr></div>
+
+
+    <div class="section" id="skills"><h1> Skills </h1><hr></div>
 
     <div class="container">
       <div class="row">
@@ -130,32 +134,35 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+
+    <div class="section" id="projects"><h1> Projects </h1><hr></div>
+
+   <!--  <div class="container">
+      <div class="row">
         <div class="col-md-4">
           <div class="well">
             <h3>I Build Great Websites</h3>
             <p>Being a full stack developer, I can develop any website from a database driven web app to a small static site. Every custom website built uses higher grade techniques and is fast, mobile friendly, scalable.</p>
           </div>
         </div>
-      </div><!--/.row-->
-    </div><!--/.container-->
+      </<! --> 
     <div class="work visible-lg" style="height:250px !important;">
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <h3><i class="fa fa-code"></i>&nbsp; Beautiful Code</h3>
-            <p>I write clean, semantic, organized, and valid markup that eliminates excess code and allows others to easily understand and therfore update content in the future.</p>
+            <h3><i class="fa fa-code"></i>&nbsp; Fyrne - An Adventure Game For All </h3>
+            <p>Conceptualized, designed and developed a choose-your-own-adventure game using Python and Microsoft Azure aimed at promoting diversity, tolerance and inclusivity through its storyline; Project started at TartanHacks</p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-fighter-jet"></i>&nbsp; Fast</h3>
-            <p>I build fast and efficient web sites. Fast websites always attract more visitors, and those visitors are more likely to choose you over the competition. In addition, website speed is essential for <abbr title="Search Engine Optimization">SEO</abbr> &mdash; <a href="http://moz.com/blog/how-website-speed-actually-impacts-search-ranking">faster websites rank higher</a>.</p>
+            <h3><i class="fa fa-fighter-jet"></i>&nbsp; Voting System</h3>
+            <p>Designed and coded voting system for student council elections using C++; in use at National Academy For Learning.</p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-arrows-alt"></i>&nbsp; Responsive</h3>
-            <p>Responsive web design means that your website will work on any screen size, from desktops to mobile phones alike. Having a website that works well across all devices and screen sizes means your website has a broader reach, appealing to more visitors.</p>
-          </div>
-          <div class="col-md-3">
-            <h3><i class="fa fa-bolt"></i>&nbsp; Powerful</h3>
-            <p>From a static single page website to a full fledged database driven web app, I build websites that give your organization the potential to succeed.</p>
+            <h3><i class="fa fa-arrows-alt"></i>&nbsp; Agrigaid </h3>
+            <p>Conceptualized, designed and coded a mobile application that helps farmers rent and lend farming equipment using MIT App Inventor and created a business plan, pitch video and demo video for the mobile application; App was a semifinalist at Technovation, a competition for women in entrepreneurship</p>
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
@@ -165,58 +172,29 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-code"></i>&nbsp; Beautiful Code</h3>
-            <p>I write clean, semantic, organized, and valid markup that eliminates excess code and allows others to easily understand and therfore update content in the future.</p>
+            <h3><i class="fa fa-code"></i>&nbsp; Fyrne - An Adventure Game For All</h3>
+            <p>Conceptualized, designed and developed a choose-your-own-adventure game using Python and Microsoft Azure aimed at promoting diversity, tolerance and inclusivity through its storyline; Project started at TartanHacks </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-fighter-jet"></i>&nbsp; Fast</h3>
-            <p>I build fast and efficient web sites. Fast websites always attract more visitors, and those visitors are more likely to choose you over the competition. In addition, website speed is essential for <abbr title="Search Engine Optimization">SEO</abbr> &mdash; <a href="http://moz.com/blog/how-website-speed-actually-impacts-search-ranking">faster websites rank higher</a>.</p>
+            <h3><i class="fa fa-fighter-jet"></i>&nbsp; Voting System </h3>
+            <p>Designed and coded voting system for student council elections using C++; in use at National Academy For Learning. </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-arrows-alt"></i>&nbsp; Responsive</h3>
-            <p>Responsive web design means that your website will work on any screen size, from desktops to mobile phones alike. Having a website that works well across all devices and screen sizes means your website has a broader reach, appealing to more visitors.</p>
-          </div>
-        </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="well">
-            <h3><i class="fa fa-bolt"></i>&nbsp; Powerful</h3>
-            <p>From a static single page website to a full fledged database driven web app, I build websites that give your organization the potential to succeed.</p>
+            <h3><i class="fa fa-arrows-alt"></i>&nbsp; Agrigaid </h3>
+            <p>Conceptualized, designed and coded a mobile application that helps farmers rent and lend farming equipment using MIT App Inventor and created a business plan, pitch video and demo video for the mobile application; App was a semifinalist at Technovation, a competition for women in entrepreneurship </p>
           </div>
         </div>
       </div><!--/.row-->
     </div><!--/.container and mobile work-->
 
 
-    <div class="section" id="work"><h1>Recent Work</h1><hr></div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="well">
-            <a href="http://teamflightbasketball.com"><img src="http://timothy.expert/codepen-resources/teamflightbasketball.png" alt="teamflightbasketball.com" height="150px" class="pull-left" style="padding-right: 15px; padding-bottom: 10px; padding-top:20px;"></a>
-            <h3>Team Flight Basketball</h3>
-            <p>A website for the youth basketball organization, Team Flight Basketball</p>
-            <div class="spacer"></div><div class="spacer"></div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="well">
-            <a href="http://givingshops.com"><img src="http://timothy.expert/codepen-resources/givingshops.png" alt="GivingShops.com" height="150px" class="pull-left" style="padding-right: 15px; padding-bottom: 10px; padding-top:20px;"></a>
-            <h3>GivingShops</h3>
-            <p>An organization that aims to help people earn for their causes, just by shopping.</p>
-            <div class="spacer"></div><div class="spacer"></div>
-          </div>
-        </div>
-      </div><!--/.row-->
-    </div><!--/.container-->
-
 
     <!--<div class="hidden-xs"><div class="work-together" id="contact">LETS WORK TOGETHER</div></div>-->
-    <div class="section" id="contact"><h1>Let&apos;s Work Together</h1><hr></div>
+    <div class="section" id="contact"><h1>Contact </h1><hr></div>
 
     <div class="work-together">
       <div class="container">
@@ -261,7 +239,6 @@
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
-      <div class="container hidden-sm hidden-xs"><div class="spacer"></div><div class="spacer"></div><footer><p class="pull-right">Made in Chicago by Tim</p></footer></div>
     </div><!--/.work-together-->
 
   </div><!--/.page-wrap-->
