--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
           </div><!--/.col-->
           <div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 		  <h3>Contact Details</h3><div class="spacer"></div>
+      <p class="lead" style="margin-bottom:0px;"><i class="fa fa-map-marker"></i>&nbsp; 5032 Forbes Avenue, SMC 1890</p><p class="lead" style="text-indent:24px">Pittsburgh, PA, 15289</p>
+            <p class="lead"><i class="fa fa-phone"></i>&nbsp; 412 616-7056</p>
+            <p class="lead"><i class="fa fa-envelope"></i>&nbsp; ananyara@andrew.cmu.edu</p>
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
