--- a/index.html
+++ b/index.html
@@ -1,3 +1,25 @@
+<!DOCTYPE html>
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Personal Website</title>
+  <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Ananya Rao Personal Website">
+<meta name="author" content="Ananya Rao">
+  
+  <link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,500'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
 <html lang="en">
 <body>
 
@@ -236,9 +258,9 @@
           </div><!--/.col-->
           <div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
 		  <h3>Contact Details</h3><div class="spacer"></div>
-      		  <p class="lead" style="margin-bottom:0px;"><i class="fa fa-map-marker"></i>&nbsp; 5032 Forbes Avenue, SMC 1890</p><p class="lead" style="text-indent:24px">Pittsburgh, PA, 15289</p>
-            	  <p class="lead"><i class="fa fa-phone"></i>&nbsp; 412 616-7056</p>
-            	  <p class="lead"><i class="fa fa-envelope"></i>&nbsp; ananyara@andrew.cmu.edu</p>
+      <p class="lead" style="margin-bottom:0px;"><i class="fa fa-map-marker"></i>&nbsp; 5032 Forbes Avenue, SMC 1890</p><p class="lead" style="text-indent:24px">Pittsburgh, PA, 15289</p>
+            <p class="lead"><i class="fa fa-phone"></i>&nbsp; 412 616-7056</p>
+            <p class="lead"><i class="fa fa-envelope"></i>&nbsp; ananyara@andrew.cmu.edu</p>
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
