--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <div class="row">
         <div class="col-md-4">
           <div class="well">
-            <img src="pp.jpg" style="height:50%; width:50%">
+            <img src="pp.jpg" style="height:100px; width:100px">
           </div>
         </div>
         <div class="col-md-8">
           <div class="well">
-            <h3 class="text-center">I am currently a second-year student attending Carnegie Mellon University in Pittsburgh, PA. I am pursuing a Bachelors in Science degree in Computer Science, with an additional major in Robotics.</h3>
+            <h5 class="text-center">I am currently a second-year student attending Carnegie Mellon University in Pittsburgh, PA. I am pursuing a Bachelors in Science degree in Computer Science, with an additional major in Robotics.</h5>
           </div>
         </div>
       </div><!--/.row-->
