--- a/index.html
+++ b/index.html
@@ -18,6 +18,41 @@
 
 <html lang="en">
 <body>
+	
+	<style type = "text/css">
+		
+		body {
+			margin: 0;
+		}
+		/* NAV BAR */
+		.nav-bar {
+			width: 100%;
+			height: 50px;
+			margin: 0;
+			background: blue;
+			/* Toggle between static and sticky */
+			/*position: sticky;
+			top: 0; */
+		}
+		.nav-bar > .element {
+			width: 19.5%;
+			line-height: 50px;
+			text-align: center;
+			color: black;
+			display: inline-block;
+			margin: 0;
+			font-family: Times New Roman;
+			text-decoration: none;
+		}
+		.nav-bar > .element:hover { 
+  			text-decoration: underline;
+		}	
+		/* BODY */
+		.content {
+			width: 80%;
+			margin-left: 10%;
+		}
+	</style>
 
   <nav class="main-nav" id="main-nav">
     <div style="height:80px;background: rgb(51,74,92);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
