--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Ananya Rao Personal Website">
+  <link rel="stylesheet" type="text/css" href="style.css">  <!-- Insert StyleSheet -->
+  <link rel="icon" href="cool-icon.png">                    <!-- Insert Icon -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <meta name="author" content="Ananya Rao">
-  
-  
-  <link rel="stylesheet" href="css/style.css">
 
   
 </head>
 
+<body>
+	<script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
+</body>
 
 <html lang="en">
 <body>
