--- a/index.html
+++ b/index.html
@@ -4,58 +4,54 @@
   <meta charset="UTF-8">
   <title>Personal Website</title>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Ananya Rao Personal Website">
-  <link rel="stylesheet" type="text/css" href="style.css">  <!-- Insert StyleSheet -->
-  <link rel="icon" href="cool-icon.png">                    <!-- Insert Icon -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <meta name="author" content="Ananya Rao">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Ananya Rao Personal Website">
+<meta name="author" content="Ananya Rao">
+  
+<link rel='stylesheet' href='https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css'>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Raleway:100,500'>
+<link rel="stylesheet" href="css/style.css">
 
   
 </head>
 
-<body>
-	<script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
-</body>
 
 <html lang="en">
 <body>
-	
-	<style type = "text/css">
-		
-		body {
-			margin: 0;
-		}
-		/* NAV BAR */
-		.nav-bar {
-			width: 100%;
-			height: 50px;
-			margin: 0;
-			background: blue;
-			/* Toggle between static and sticky */
-			/*position: sticky;
-			top: 0; */
-		}
-		.nav-bar > .element {
-			width: 19.5%;
-			line-height: 50px;
-			text-align: center;
-			color: black;
-			display: inline-block;
-			margin: 0;
-			font-family: Times New Roman;
-			text-decoration: none;
-		}
-		.nav-bar > .element:hover { 
-  			text-decoration: underline;
-		}	
-		/* BODY */
-		.content {
-			width: 80%;
-			margin-left: 10%;
-		}
-	</style>
+
+  <nav class="navbar navbar-expand-lg navbar-dark info-color">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+               <a class="nav-link waves-effect waves-light" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-effect waves-light" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link waves-effect waves-light" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle waves-effect waves-light" id="navbarDropdownMenuLink"               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+                <div class="dropdown-menu dropdown-info" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item waves-effect waves-light" href="#">Action</a>
+                    <a class="dropdown-item waves-effect waves-light" href="#">Another action</a>
+                    <a class="dropdown-item waves-effect waves-light" href="#">Something else here</a>
+                </div>
+            </li>
+        </ul>
+        <form class="form-inline">
+            <div class="md-form my-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+            </div>
+        </form>
+    </div>
+</nav>
 
   <nav class="main-nav" id="main-nav">
     <div style="height:80px;background: rgb(51,74,92);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
@@ -90,12 +86,12 @@
       <div class="row">
         <div class="col-md-4">
           <div class="well">
-            <img src="pp.jpg" style="height:300px; width:300px">
+            <img src="pp.jpg" style="height:60%; width:60%">
           </div>
         </div>
         <div class="col-md-8">
           <div class="well">
-            <h5 class="text-center">I am currently a second-year student attending Carnegie Mellon University in Pittsburgh, PA. I am pursuing a Bachelors in Science degree in Computer Science, with an additional major in Robotics.</h5>
+            <h2 class="text-center">I am currently a second-year student attending Carnegie Mellon University in Pittsburgh, PA. I am pursuing a Bachelors in Science degree in Computer Science, with an additional major in Robotics.</h2>
           </div>
         </div>
       </div><!--/.row-->
@@ -303,3 +299,4 @@
   </div><!--/.page-wrap-->
 </body>
 </html>
+
