--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
-      <div class="container hidden-sm hidden-xs"><div class="spacer"></div><div class="spacer"></div><footer><p class="pull-right">Ananya Rao</p></footer></div>
+      <div class="container hidden-sm hidden-xs"><div class="spacer"></div><div class="spacer"></div><footer><a href="#about"><i class="fa fa-user fa-fw"></i>&nbsp; About</a></footer></div>
     </div><!--/.work-together-->
 
   </div><!--/.page-wrap-->
