--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           </div>
         </div><!--/.row-->
       </div><!--/.container-->
-      <div class="container hidden-sm hidden-xs"><div class="spacer"></div><div class="spacer"></div><footer><a href="www.linkedin.com/in/ananyara"><i class="fab fa-linkedin"></i></a></footer></div>
+      <div class="container hidden-sm hidden-xs"><div class="spacer"></div><div class="spacer"></div><footer><a href="https://www.linkedin.com/in/ananyara">LinkedIn</a></footer></div>
     </div><!--/.work-together-->
 
   </div><!--/.page-wrap-->
