--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue • Created and tested algorithm that evaluates motion blur of visual feedback from a hexapod robot to use this information to improve the stabilization of locomotion of the robot</p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-fighter-jet"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fa fa-train"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
           <div class="col-md-3">
