--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <nav class="main-nav" id="main-nav">
-    <div style="height:80px;background: rgb(51,74,92);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
+    <div style="height:80px;background: rgb(45,80,2);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
     <ul class="nav nav-pills nav-stacked">
       <li class="active"><a href="#"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a></li>
       <li><a href="#about"><i class="fa fa-user fa-fw"></i>&nbsp; About</a></li>
@@ -80,11 +80,11 @@
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-arrows-alt"></i>&nbsp; OH!Lab, Carnegie Mellon University</h3>
+            <h3><i class="fa fa-gamepad"></i>&nbsp; OH!Lab, Carnegie Mellon University</h3>
             <p> Conduct studies related to effect of structured review on game design and effect of gameplay on conceptual learning. Conceptualized and implemented design changes to website; Interviewed lab members to generate content
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-bolt"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fa fa-laptop-code"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16</p>
           </div>
         </div><!--/.row-->
@@ -101,19 +101,19 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-fighter-jet"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fa fa-train"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-arrows-alt"></i>&nbsp; OH!Lab, Carnegie Mellon University</h3>
+            <h3><i class="fa fa-gamepad"></i>&nbsp; OH!Lab, Carnegie Mellon University</h3>
             <p> Conduct studies related to effect of structured review on game design and effect of gameplay on conceptual learning. Conceptualized and implemented design changes to website; Interviewed lab members to generate content </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-bolt"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fa fa-laptop-code"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16 </p>
           </div>
         </div>
@@ -122,7 +122,7 @@
 
 
 
-    <div class="section" id="what-i-do"><h1>Skills</h1><hr></div>
+    <div class="section" id="skills"><h1>  Skills </h1><hr></div>
 
     <div class="container">
       <div class="row">
