--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <nav class="main-nav" id="main-nav">
-    <div style="height:80px;background: rgb(45,80,2);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
+    <div style="height:80px;background: rgb(45,75,90);padding-top: 1px;"><h2 class="text-center" style="color:#fff; letter-spacing:2px;">MENU</h2></div>
     <ul class="nav nav-pills nav-stacked">
       <li class="active"><a href="#"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a></li>
       <li><a href="#about"><i class="fa fa-user fa-fw"></i>&nbsp; About</a></li>
@@ -76,7 +76,7 @@
             <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue • Created and tested algorithm that evaluates motion blur of visual feedback from a hexapod robot to use this information to improve the stabilization of locomotion of the robot</p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-train"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fas fa-train"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
           <div class="col-md-3">
@@ -84,7 +84,7 @@
             <p> Conduct studies related to effect of structured review on game design and effect of gameplay on conceptual learning. Conceptualized and implemented design changes to website; Interviewed lab members to generate content
           </div>
           <div class="col-md-3">
-            <h3><i class="fa fa-laptop-code"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fas fa-laptop-code"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16</p>
           </div>
         </div><!--/.row-->
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-train"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fas fa-train"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
         </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fa fa-laptop-code"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fas fa-laptop-code"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16 </p>
           </div>
         </div>
