--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <ul class="nav nav-pills nav-stacked">
       <li class="active"><a href="#"><i class="fa fa-home fa-fw"></i>&nbsp; Home</a></li>
       <li><a href="#about"><i class="fa fa-user fa-fw"></i>&nbsp; About</a></li>
-      <li><a href="#experience"><i class="fa fa-user fa-fw"></i>&nbsp; Experience</a></li>
+      <li><a href="#experience"><i class="fa fa-building fa-fw"></i>&nbsp; Experience</a></li>
       <li><a href="#what-i-do"><i class="fa fa-signal fa-fw"></i>&nbsp; Skills</a></li>
       <li><a href="#work"><i class="fa fa-briefcase fa-fw"></i>&nbsp; Projects</a></li>
       <li><a href="#contact"><i class="fa fa-envelope-o fa-fw"></i>&nbsp; Contact</a></li>
@@ -73,10 +73,10 @@
         <div class="row">
           <div class="col-md-3">
             <h3><i class="fa fa-code"></i>&nbsp; Biorobotics Lab, Carnegie Mellon University</h3>
-            <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue • Created and tested algorithm that evaluates motion blur of visual feedback from a hexapod robot to use this information to improve the stabilization of locomotion of the robot</p>
+            <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion of the robot</p>
           </div>
           <div class="col-md-3">
-            <h3><i class="fas fa-train"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fa fa-car"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
           <div class="col-md-3">
@@ -84,7 +84,7 @@
             <p> Conduct studies related to effect of structured review on game design and effect of gameplay on conceptual learning. Conceptualized and implemented design changes to website; Interviewed lab members to generate content
           </div>
           <div class="col-md-3">
-            <h3><i class="fas fa-laptop-code"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fa fa-laptop"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16</p>
           </div>
         </div><!--/.row-->
@@ -101,7 +101,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fas fa-train"></i>&nbsp; GE Transportation</h3>
+            <h3><i class="fa fa-car"></i>&nbsp; GE Transportation</h3>
             <p> Completed various internal and external projects on Business Intelligence DevOps team • Worked on Tech Challenge team to replicate and improve a diagnostics analytic and build a visualization dashboard • Co-lead of DTLP Professional Development Committee; Mentor at GE Girls </p>
           </div>
         </div>
@@ -113,7 +113,7 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
-            <h3><i class="fas fa-laptop-code"></i>&nbsp; Juni Learning</h3>
+            <h3><i class="fa fa-laptop"></i>&nbsp; Juni Learning</h3>
             <p> Instructor for online computer courses in Python, Java and Scratch and AP CS for students between the ages 8 and 16 </p>
           </div>
         </div>
