--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
             <h3><i class="fa fa-code"></i>&nbsp; Biorobotics Lab, Carnegie Mellon University</h3>
-            <p> Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue • Created and tested algorithm that evaluates motion blur of visual feedback from a hexapod robot to use this information to improve the stabilization of locomotion of the robot </p>
+            <p> Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion of the robot </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
