--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-md-3">
             <h3><i class="fa fa-code"></i>&nbsp; Biorobotics Lab, Carnegie Mellon University</h3>
-            <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion of the robot</p>
+            <p>Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion</p>
           </div>
           <div class="col-md-3">
             <h3><i class="fa fa-car"></i>&nbsp; GE Transportation</h3>
@@ -96,7 +96,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12">
           <div class="well">
             <h3><i class="fa fa-code"></i>&nbsp; Biorobotics Lab, Carnegie Mellon University</h3>
-            <p> Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion of the robot </p>
+            <p> Working on path planning algorithms for heterogeneous multi-agent robotic systems for search and rescue; Created algorithm that evaluates motion blur of visual feedback from a hexapod robot to improve the stabilization of locomotion </p>
           </div>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -132,10 +132,10 @@
             <div class="spacer"></div><div class="spacer"></div>
             <div class="row">
               <div class="col-md-4">
-                <div class="html"></div> <h4 style="font-weight: 400; display: inline;">C++</h4><br>
-                <div class="css"></div> <h4 style="font-weight: 400; display: inline;">Java</h4><br>
-                <div class="php"></div> <h4 style="font-weight: 400; display: inline;">Python</h4><br>
-                <div class="sql"></div> <h4 style="font-weight: 400; display: inline; margin-bottom:5px;">SML</h4>
+                <div class="cpp"></div> <h4 style="font-weight: 400; display: inline;">C++</h4><br>
+                <div class="java"></div> <h4 style="font-weight: 400; display: inline;">Java</h4><br>
+                <div class="python"></div> <h4 style="font-weight: 400; display: inline;">Python</h4><br>
+                <div class="sml"></div> <h4 style="font-weight: 400; display: inline; margin-bottom:5px;">SML</h4>
               </div>
               <div class="col-md-8">
                 <div class="progress">
